# python-template

./: .env  .env.cli  .env.lint  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile.pre-commit  README.md  docker-compose-cli.yml  docker-compose.lint-docker.yml  docker-compose.lint-dockerfile.yml  docker-compose.lint.yml  docker-compose.override.yml  docker-compose.scan-docker.yml  docker-compose.scan.yml  docker-compose.test.watch.yml  docker-compose.test.yml  docker-compose.yml  pre-commit-install.sh
app/: .dockerignore  Dockerfile  docker-compose-app.yml
app/app/: main.py  pyproject.toml
app/docker/: cli-entrypoint.sh  healthcheck.py  lint-command.sh  pip-cli-alias.sh  test-command.sh  test-watch-command.sh
app/test/: test_server.py
docker/: docker-compose-lint-docker.yml  docker-compose-scan-docker.yml  docker-compose-scan-fs.yml  scan.Dockerfile
