[project]
name = "python-template"
version = "0.1.0"
description = "Template project for a Python web application."
requires-python = ">=3.14"
authors = [
	{name = "Matiboux", email = "matiboux@gmail.com"},
]
maintainers = [
	{name = "Matiboux", email = "matiboux@gmail.com"},
]
dependencies = []

[dependency-groups]
dev = [
	"ruff>=0.14.3",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = ["ALL"]
# Ignore rules:
# - W191 (tab-indentation) because we use tabs for indentation
# - D203 (incorrect-blank-line-before-class) to enable D211 (blank-line-before-class)
# - D206 (docstring-tab-indentation) because we use tabs for indentation
# - D213 (multi-line-summary-second-line) to enable D212 (multi-line-summary-first-line)
# - COM812 (missing-trailing-comma) conflicts with the formatter
ignore = ["W191", "D203", "D206", "D213", "COM812"]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["app", "data_init", "test"]
known-third-party = ["minio"]

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "lf"
